# website

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
assets/: inspect_glb.html  list_anims.html
assets/embed/: preview.css  preview.js
assets/style/: main.css
assets/wasm/: renzora_preview.js
crates/api/: Cargo.toml
crates/api/src/: admin.rs  api_tokens.rs  articles.rs  auth.rs  avatar.rs  courses.rs  creator.rs  credits.rs  discord.rs  docs.rs  error.rs  feed.rs  forum.rs  games.rs  gameservices.rs  jwt.rs  levels.rs  lib.rs  library.rs  marketplace.rs  messages.rs  middleware.rs  notifications.rs  preview.rs  profiles.rs  subscriptions.rs  teams.rs  user.rs  ws.rs
crates/common/: Cargo.toml
crates/models/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: docs_files.rs  main.rs
crates/web/: Cargo.toml
docs/: SCREENSHOT_CHECKLIST.md  _sidebar.json
docs/dev/: building-from-source.md
docs/developer/: api-authentication.md  api-credits.md  api-feed.md  api-game-services.md  api-marketplace.md  api-messaging.md  api-rate-limits.md  api-websocket.md  architecture.md  asset-packing.md  asset-pipeline.md  camera-system.md  code-style.md  components.md  contributing.md  cross-compilation.md  custom-nodes.md  ecs.md  export-templates.md  inspector-fields.md  materials-dev.md  panels.md  plugins.md  post-processing.md  project-structure.md  render-pipeline.md  resources.md  script-bindings.md  shaders.md  systems.md  testing.md  themes.md  widgets.md
docs/game-dev/: animation.md  audio.md  blueprint-api.md  blueprints.md  browsing-assets.md  concepts.md  credits.md  editor-overview.md  export-android.md  export-ios.md  export-linux.md  (+21 more)
migrations/: 001_initial.sql  002_docs_and_articles.sql  003_categories_and_admin.sql  004_forums_profiles_badges.sql  005_profile_customization.sql  006_roles_bans_mod_notes.sql  007_hub_categories.sql  008_courses.sql  009_asset_comments.sql  010_promo_codes.sql  011_referrals.sql  012_withdrawals.sql  013_reviews.sql  014_creator_onboarding.sql  015_asset_media.sql  016_discord_oauth.sql  017_game_store.sql  018_two_factor_auth.sql  019_views.sql  020_storefronts.sql  021_badge_rules_and_wishlists.sql  022_asset_tags.sql  023_api_tokens.sql  024_asset_extended_fields.sql  025_subscriptions_and_teams.sql  026_licensing_and_library.sql  027_download_filename_tags_subcategories.sql  028_credit_attribution.sql  029_developer_apps_game_services.sql  030_asset_files.sql  031_token_suspension.sql  032_admin_tools.sql  033_audit_and_indexes.sql  034_messaging_social_admin.sql  035_social_gifts_donations.sql  036_avatar_system.sql  037_xp_levels_seller_levels.sql  038_auto_badges_and_milestones.sql
nginx/: nginx.conf
(+84 files in other folders)
