[package]
name = "renzora-server"
version = "0.1.0"
edition = "2021"

[dependencies]
renzora-api = { path = "../api" }
renzora-web = { path = "../web" }
renzora-models = { path = "../models" }
renzora-common = { path = "../common" }
axum = { workspace = true }
leptos = { workspace = true }
leptos_axum = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
pulldown-cmark = { workspace = true }
rust-s3 = { workspace = true }
